--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,40 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:visibility="visible"
+    android:background="@android:color/darker_gray"
     tools:context=".MainActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="164dp"
+        android:layout_width="295dp"
         android:layout_height="50px"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:progressBackgroundTint="#EE0000"
+
         />
 
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="214dp"
-        android:layout_height="wrap_content"
-        android:text="Switch" />
+        android:layout_width="230dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:layout_marginRight="35dp"
+        android:text="Free WiFi" />
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="214dp"
+        android:layout_width="241dp"
         android:layout_height="wrap_content"
-        android:text="CheckBox" />
+        android:text="CheckBox"
+        />
 
     <CheckBox
         android:id="@+id/checkBox2"
-        android:layout_width="match_parent"
+        android:layout_width="242dp"
         android:layout_height="wrap_content"
         android:text="CheckBox" />
 
