--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:progressBackgroundTint="#EE0000"
-
+        android:progress="50"
         />
 
 
@@ -34,14 +34,24 @@
         android:id="@+id/checkBox"
         android:layout_width="241dp"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
-        />
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="35dp"
+        android:buttonTint="@android:color/holo_green_light"
+
+        android:text="Programmer"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <CheckBox
         android:id="@+id/checkBox2"
-        android:layout_width="242dp"
+        android:layout_width="241dp"
         android:layout_height="wrap_content"
-        android:text="CheckBox" />
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="7dp"
+        android:buttonTint="@android:color/holo_red_light"
+        android:checked="false"
+        android:clickable="true"
+        android:text="UX Designer"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
 
 </LinearLayout>
